# torchcvnn

./: pyproject.toml
.github/workflows/: test.yml
