[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "torchcvnn"
dynamic = ["version"]

dependencies = [
	"torch >= 2.0",
	"numpy >= 2.0",
	"requests >= 2.31.0",
	"tqdm >= 4.66.1",
  "pillow >= 11.1.0",
  "scipy>=1.6.0",
  "h5py>=3.12.1",
  "huggingface-hub>=0.32.6"
]
requires-python = ">= 3.9.10"
authors = [
{name= "Jeremy Fix", email="jeremy.fix@centralesupelec.fr" },
{name= "Quentin Gabot", email="quentin.gabot@centralesupelec.fr" }
]
maintainers = [
{name= "Jeremy Fix", email="jeremy.fix@centralesupelec.fr" }
]
description = "torchcvnn provides complex valued layers to be used with pytorch"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["deep learning", "pytorch", "complex valued neural networks"] 

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[tool.setuptools.dynamic]
version = {attr = "torchcvnn.__version__"}

[project.optional-dependencies]

docs = [
    "sphinx>=8.1.3",
    "furo>=2024.04.27",
    "sphinx-copybutton>=0.5.2",
]
